# shellplot

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  environment.yml  pyproject.toml
src/: __about__.py  __init__.py
tests/: __init__.py
